package com.example.schiffeversenken;

import jakarta.ws.rs.ApplicationPath;
import jakarta.ws.rs.core.Application;

@ApplicationPath("/api")
public class SchiffeVersenkenApplictation extends Application {

}