package com.example.schiffeversenken.data;

public interface ShipPartState {

    public int hit();

}
