@startuml

title __SCHIFFEVERSENKEN's Class Diagram__\n

  namespace  {
    namespace om.example.schiffeversenken {
      class com.example.schiffeversenken.SchiffeVersenkenApplictation {
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace api {
        class com.example.schiffeversenken.api.GameEndpoint {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace api {
        class com.example.schiffeversenken.api.GameSocket {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace api {
        class com.example.schiffeversenken.api.SocketTest {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace bl {
        class com.example.schiffeversenken.bl.Game {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Coordinates {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Player {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Ship {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPart {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        interface com.example.schiffeversenken.data.ShipPartState {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPartStateHit {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPartStateNotHit {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace db {
        class com.example.schiffeversenken.db.GameDatabase {
        }
      }
    }
  }
  

  com.example.schiffeversenken.SchiffeVersenkenApplictation -up-|> jakarta.ws.rs.core.Application
  com.example.schiffeversenken.bl.Game o-- com.example.schiffeversenken.data.Player : player1
  com.example.schiffeversenken.bl.Game o-- com.example.schiffeversenken.data.Player : player2
  com.example.schiffeversenken.bl.Game o-- com.example.schiffeversenken.data.Player : winner
  com.example.schiffeversenken.data.ShipPart o-- com.example.schiffeversenken.data.Coordinates : coordinates
  com.example.schiffeversenken.data.ShipPart o-- com.example.schiffeversenken.data.ShipPartState : state
  com.example.schiffeversenken.data.ShipPartStateHit .up.|> com.example.schiffeversenken.data.ShipPartState
  com.example.schiffeversenken.data.ShipPartStateNotHit .up.|> com.example.schiffeversenken.data.ShipPartState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
